--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -1,5 +1,24 @@
 <resources>
-    <string name="app_name">PotateDaHome</string>
-    <string name="loading">Fry some potatoes meanwhile&#8230;</string>
-    <string name="time_pattern">dd_MM_yy_hh-ss</string>
+    <string name="live_wallpaper_name" translatable="false">PotateDaHome</string>
+
+    <!-- Card titles -->
+    <string name="title_background">Background color</string>
+    <string name="title_potato">Potato color</string>
+    <string name="title_presets" translatable="false">Presets</string>
+
+    <!-- Preferences keys -->
+    <string name="background_key" translatable="false">background_key</string>
+    <string name="potato_key" translatable="false">potato_key</string>
+    <string name="theme_key" translatable="false">theme_key</string>
+
+    <!-- BottomBar menu items -->
+    <string name="title_info">Info</string>
+    <string name="title_theme">Theme</string>
+    <string name="title_restore">Restore default potato!</string>
+
+    <string name="app_git_link" translatable="false">https://github.com/enricocid/PotateDaHome</string>
+    <string name="install_browser_message">Install a browser first!</string>
+
+    <!-- Hex string -->
+    <string name="hex" translatable="false">#%1s</string>
 </resources>
