--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -10,10 +10,13 @@
     <string name="background_key" translatable="false">background_key</string>
     <string name="potato_key" translatable="false">potato_key</string>
     <string name="theme_key" translatable="false">theme_key</string>
+    <string name="accent_background_set" translatable="false">accent_background_set</string>
+    <string name="accent_potato_set" translatable="false">accent_potato_set</string>
 
     <!-- BottomBar menu items -->
     <string name="title_theme">Theme</string>
     <string name="title_restore">Restore default potato!</string>
+    <string name="title_set_accent">Set system accent!</string>
 
     <string name="app_git_link" translatable="false">https://github.com/enricocid/PotateDaHome</string>
     <string name="install_browser_message">Install a browser first!</string>
