--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="title_presets" translatable="false">Presets</string>
 
     <!-- Preferences keys -->
-    <string name="background_key" translatable="false">background_key</string>
-    <string name="potato_key" translatable="false">potato_key</string>
+    <string name="background_color_key" translatable="false">background_key</string>
+    <string name="potato_color_key" translatable="false">potato_key</string>
     <string name="theme_key" translatable="false">theme_key</string>
     <string name="accent_background_set" translatable="false">accent_background_set</string>
     <string name="accent_potato_set" translatable="false">accent_potato_set</string>
