--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="live_wallpaper_name" translatable="false">PotateDaHome</string>
+    <string name="potato_header" translatable="false">Potate da home!</string>
 
     <!-- Card titles -->
     <string name="title_background">Background color</string>
