--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="live_wallpaper_name" translatable="false">PotateDaHome</string>
-    <string name="potato_header" translatable="false">Potate da home!</string>
+    <string name="live_wallpaper_name" translatable="false">Potate da home!</string>
 
     <!-- Card titles -->
     <string name="title_background">Background</string>
