--- a/project/app/src/main/res/values-it/strings.xml
+++ b/project/app/src/main/res/values-it/strings.xml
@@ -2,12 +2,18 @@
 
     <!-- Titoli cards -->
     <string name="title_background">Sfondo</string>
-    <string name="title_potato">Patata</string>
+    <string name="title_vector">Grafica</string>
     <string name="title_accent_me">ACCENTAMI!</string>
 
     <!-- Items del menu della BottomBar -->
     <string name="title_theme">Tema</string>
-    <string name="title_restore">Ripristina patata default</string>
+    <string name="title_restore">Ripristina colori di default</string>
 
     <string name="install_browser_message">Installa un browser prima!</string>
+
+    <string name="title_save_to">Salva nella memoria interna</string>
+    <string name="title_crop">Crop e setta come sfondo</string>
+    <string name="title_go_live">Setta come LiveWallpaper</string>
+    <string name="message_saved_to">%1s salvato in %1s</string>
+    <string name="title_size">Dimensione</string>
 </resources>
